// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Label Default 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  line-height: 16px;
  font-weight: 600;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  text-transform: uppercase;
}

.c0 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  margin-bottom: 8px;
  float: left;
}

<div>
  <div
    className="labelText c0 c1"
    fontWeight="title"
    letterSpacing="2px"
    size={14}
    type="#2f313a"
  >
    Default Label
  </div>
</div>
`;

exports[`Storyshots Label Disabled 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: rgba(0,0,0,0.32);
  text-align: left;
  line-height: 16px;
  font-weight: 600;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  text-transform: uppercase;
}

.c0 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  margin-bottom: 8px;
  float: left;
}

<div>
  <div
    className="labelText c0 c1"
    fontWeight="title"
    letterSpacing="2px"
    size={14}
    type="rgba(0, 0, 0, 0.32)"
  >
    Disabled Label
  </div>
</div>
`;

exports[`Storyshots Label Focused 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #3498db;
  text-align: left;
  line-height: 16px;
  font-weight: 600;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  text-transform: uppercase;
}

.c0 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  margin-bottom: 8px;
  float: left;
}

<div>
  <div
    className="labelText c0 c1"
    fontWeight="title"
    letterSpacing="2px"
    size={14}
    type="#3498db"
  >
    Focused Label
  </div>
</div>
`;

exports[`Storyshots Label Invalid 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #dd3311;
  text-align: left;
  line-height: 16px;
  font-weight: 600;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  text-transform: uppercase;
}

.c0 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  margin-bottom: 8px;
  float: left;
}

<div>
  <div
    className="labelText c0 c1"
    fontWeight="title"
    letterSpacing="2px"
    size={14}
    type="#dd3311"
  >
    Invalid Label
  </div>
</div>
`;

exports[`Storyshots Label Protected and disabled 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  line-height: 16px;
  font-weight: 600;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  text-transform: uppercase;
}

.c0 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  margin-bottom: 8px;
  float: left;
}

<div>
  <div
    className="labelText c0 c1"
    fontWeight="title"
    letterSpacing="2px"
    size={14}
    type="#2f313a"
  >
    Protected Label
  </div>
</div>
`;

exports[`Storyshots Label With more info 1`] = `
.c5 {
  position: relative;
  display: inline-block;
}

.c5 .hit-area {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.c5 .appear-enter {
  opacity: 0;
}

.c5 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c5 .appear-exit {
  opacity: 1;
}

.c5 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

.c4 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-weight: 600;
}

.c1 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  line-height: 16px;
  font-weight: 600;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  text-transform: uppercase;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c3 .tooltip {
  margin-left: -4px;
}

.c3 .icon {
  display: inline-block;
  margin: 0 8px;
  cursor: pointer;
  color: #59636f;
}

.c3 .icon:hover,
.c3 .hovered {
  color: #3498db;
}

.c0 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  margin-bottom: 8px;
  float: left;
}

.c2 {
  position: relative;
  top: -1px;
}

<div>
  <div
    className="labelText c0 c1"
    fontWeight="title"
    letterSpacing="2px"
    size={14}
    type="#2f313a"
  >
    Default Label
  </div>
  <div
    className="moreInfo c2 c3"
  >
    <div
      className="text  c4"
      fontWeight="title"
      size={16}
      type="#59636f"
    />
    <div
      className="icon c5"
    >
      <div
        className="hit-area"
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
      />
      <i
        className="wg-question"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Label With more info right aligned 1`] = `
.c5 {
  position: relative;
  display: inline-block;
}

.c5 .hit-area {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.c5 .appear-enter {
  opacity: 0;
}

.c5 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c5 .appear-exit {
  opacity: 1;
}

.c5 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

.c4 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-weight: 600;
}

.c1 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  line-height: 16px;
  font-weight: 600;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  text-transform: uppercase;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c3 .tooltip {
  margin-right: -4px;
}

.c3 .icon {
  display: inline-block;
  margin: 0 8px;
  cursor: pointer;
  color: #59636f;
}

.c3 .icon:hover,
.c3 .hovered {
  color: #3498db;
}

.c0 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  margin-bottom: 8px;
  float: left;
}

.c2 {
  position: relative;
  top: -1px;
}

<div>
  <div
    className="labelText c0 c1"
    fontWeight="title"
    letterSpacing="2px"
    size={14}
    type="#2f313a"
  >
    Default Label
  </div>
  <div
    className="moreInfo c2 c3"
  >
    <div
      className="text  c4"
      fontWeight="title"
      size={16}
      type="#59636f"
    />
    <div
      className="icon c5"
    >
      <div
        className="hit-area"
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
      />
      <i
        className="wg-question"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Label extended style 1`] = `
.c2 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  line-height: 16px;
  font-weight: 600;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  text-transform: uppercase;
}

.c1 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  margin-bottom: 8px;
  float: left;
}

.c0 {
  border: dotted 4px sienna;
}

.c0::after {
  display: block;
  content: '';
  clear: both;
}

<div
  className="c0"
>
  <div
    className="labelText c1 c2"
    fontWeight="title"
    letterSpacing="2px"
    size={14}
    type="#2f313a"
  >
    Default Label
  </div>
</div>
`;

exports[`Storyshots SideNav Nav With Js Media Query 1`] = `
.c10 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: inherit;
}

.c5 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: inherit;
  text-align: left;
  font-weight: 600;
}

.c9 {
  font-family: Lato,sans-serif;
  font-size: 32px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
  text-transform: uppercase;
}

.c7 {
  box-sizing: border-box;
  width: 36px;
  height: 36px;
  border-radius: 100%;
  object-fit: cover;
}

.c2 {
  box-sizing: border-box;
  position: fixed;
  bottom: 0;
  left: 0;
  top: 56px;
  overflow-x: hidden;
  -webkit-transition: 0.25s;
  transition: 0.25s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  background-color: #f6f8f9;
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.32);
  z-index: 100;
  width: 56px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  list-style-type: none;
  padding: 8px;
  cursor: pointer;
  color: rgba(0,0,0,0.48);
}

.c4 .thumb-container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 40px;
  min-width: 40px;
  margin-right: 8px;
}

.c4 .icon {
  font-size: 24px;
  color: rgba(0,0,0,0.48);
}

.c4:hover,
.c4.activated {
  color: #2f313a;
  background-color: rgba(255,68,17,0.04);
}

.c4:hover .icon,
.c4.activated .icon {
  color: #ff4411;
}

.c4.activated {
  padding-left: 4px;
  border-left: 4px solid #ff4411;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  list-style-type: none;
  padding: 8px;
  cursor: pointer;
  background-color: white;
  color: rgba(0,0,0,0.48);
}

.c6 .thumb-container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 40px;
  min-width: 40px;
  margin-right: 8px;
}

.c6 .icon {
  font-size: 24px;
  color: rgba(0,0,0,0.48);
}

.c6:hover,
.c6.activated {
  color: #2f313a;
  background-color: rgba(255,68,17,0.04);
}

.c6:hover .icon,
.c6.activated .icon {
  color: #ff4411;
}

.c6.activated {
  padding-left: 4px;
  border-left: 4px solid #ff4411;
}

.c8 {
  box-sizing: border-box;
  -webkit-overflow-scrolling: touch;
  margin-top: 56px;
  -webkit-transition: margin 0.25s;
  transition: margin 0.25s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  margin-left: 56px;
}

.c1 {
  box-sizing: border-box;
  color: #ff4411;
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 16px;
  height: 40px;
  width: 40px;
  cursor: pointer;
  border-radius: 8px;
  position: fixed;
  top: 8px;
  left: 8px;
  z-index: 110;
}

.c1:hover {
  background-color: rgba(255,68,17,0.08);
  color: #ff4411;
}

.c3 {
  box-sizing: border-box;
  color: rgba(0,0,0,0.48);
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 16px;
  height: 40px;
  width: 40px;
  cursor: pointer;
  border-radius: 8px;
  position: absolute;
  top: 8px;
  right: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  opacity: 0;
  -webkit-transition: 0.25s;
  transition: 0.25s;
  display: none;
}

.c3:hover {
  background-color: rgba(255,68,17,0.08);
  color: #ff4411;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  height: 56px;
  box-shadow: 0px 1px 1px 0px rgba(0,0,0,0.32);
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  background-color: white;
  z-index: 101;
}

<div>
  <div
    className="c0"
  />
  <div
    className="c1"
    data-testid="toggle-navbar"
    onClick={[Function]}
    role="button"
  >
    <i
      className="wg-list"
    />
  </div>
  <nav
    className="c2"
    data-testid="navbar-collapsed"
  >
    <div
      className="c3"
      data-testid="close-navbar"
      onClick={[Function]}
      role="button"
    >
      <i
        className="wg-close"
      />
    </div>
    <a
      aria-current={null}
      className="c4"
      expanded={false}
      highlightColor="#ff4411"
      href="/purveyor"
      iconSize="24px"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
      variant="push"
      zIndex={100}
    >
      <div
        className="thumb-container"
      >
        <i
          className="icon wg-purveyor"
        />
      </div>
      <div
        className="c5"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        purveyor
      </div>
    </a>
    <a
      aria-current={null}
      className="c4"
      expanded={false}
      highlightColor="#ff4411"
      href="/order"
      iconSize="24px"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
      variant="push"
      zIndex={100}
    >
      <div
        className="thumb-container"
      >
        <i
          className="icon wg-order"
        />
      </div>
      <div
        className="c5"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        order
      </div>
    </a>
    <a
      aria-current={null}
      className="c4"
      expanded={false}
      highlightColor="#ff4411"
      href="/search"
      iconSize="24px"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
      variant="push"
      zIndex={100}
    >
      <div
        className="thumb-container"
      >
        <i
          className="icon wg-search"
        />
      </div>
      <div
        className="c5"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        search
      </div>
    </a>
    <a
      aria-current={null}
      className="c4"
      expanded={false}
      highlightColor="#ff4411"
      href="/meat"
      iconSize="24px"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
      variant="push"
      zIndex={100}
    >
      <div
        className="thumb-container"
      >
        <i
          className="icon wg-meat"
        />
      </div>
      <div
        className="c5"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        meat
      </div>
    </a>
    <a
      aria-current={null}
      background="white"
      className="c6"
      expanded={false}
      highlightColor="#ff4411"
      href="/account"
      iconSize="24px"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
      variant="push"
      zIndex={100}
    >
      <div
        className="thumb-container"
      >
        <img
          alt=""
          className="c7"
          size={36}
          src="https://picsum.photos/640/?image=889"
        />
      </div>
      <div
        className="c5"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        Account
      </div>
    </a>
  </nav>
  <div
    className="c8"
    data-testid="content-navbar"
  >
    <div
      style={
        Object {
          "boxSizing": "border-box",
          "height": "100vh",
          "margin": "0 24px",
          "padding": "24px",
        }
      }
    >
      <div
        className="c9"
        fontWeight="title"
        size={32}
        type="#2f313a"
      >
        select a route
      </div>
      <div
        style={
          Object {
            "margin": "16px 0",
          }
        }
      >
        <div
          className="c10"
          fontWeight="inherit"
          size={18}
          type="#2f313a"
        >
          Lorem iTextsum dolor sit amet, consectetur adipisicing elit. Qui dicta minus molestiae vel beatae natus eveniet ratione temporibus aperiam harum alias officiis assumenda officia quibusdam deleniti eos cupiditate dolore doloribus!
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots SideNav Side Nav Full Screen 1`] = `
Array [
  .c0 {
  box-sizing: border-box;
  color: #ff4411;
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 16px;
  height: 40px;
  width: 40px;
  cursor: pointer;
  border-radius: 8px;
  position: fixed;
  top: 8px;
  left: 8px;
  z-index: 90;
}

.c0:hover {
  background-color: rgba(255,68,17,0.08);
  color: #ff4411;
}

<div
    className="c0"
    data-testid="toggle-navbar"
    onClick={[Function]}
    role="button"
  >
    <i
      className="wg-list"
    />
  </div>,
  .c4 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: inherit;
  text-align: left;
  font-weight: 600;
}

.c0 {
  box-sizing: border-box;
  position: fixed;
  bottom: 0;
  left: 0;
  top: 0;
  overflow-x: hidden;
  -webkit-transition: 0.25s;
  transition: 0.25s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  background-color: #f6f8f9;
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.32);
  z-index: 100;
  top: 0;
  width: 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-backdrop-filter: blur(5px);
  backdrop-filter: blur(5px);
  opacity: 0.9;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  list-style-type: none;
  padding: 8px;
  cursor: pointer;
  color: rgba(0,0,0,0.48);
  border-radius: 90px;
  padding: 8px 16px;
}

.c3 .thumb-container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 40px;
  min-width: 40px;
  margin-right: 8px;
}

.c3 .icon {
  font-size: 24px;
  color: rgba(0,0,0,0.48);
}

.c3:hover,
.c3.activated {
  color: #2f313a;
  background-color: rgba(255,68,17,0.04);
}

.c3:hover .icon,
.c3.activated .icon {
  color: #ff4411;
}

.c3.activated {
  padding-left: 4px;
  border-left: 4px solid #ff4411;
}

.c3:hover,
.c3.activated {
  color: #ff4411;
}

.c3.activated {
  padding-left: 16px;
  border-left: none;
}

.c1 {
  box-sizing: border-box;
  color: rgba(0,0,0,0.48);
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 16px;
  height: 40px;
  width: 40px;
  cursor: pointer;
  border-radius: 8px;
  position: absolute;
  top: 8px;
  right: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  opacity: 0;
  -webkit-transition: 0.25s;
  transition: 0.25s;
}

.c1:hover {
  background-color: rgba(255,68,17,0.08);
  color: #ff4411;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  min-height: 56px;
  box-sizing: border-box;
  overflow-x: hidden;
}

<nav
    className="c0"
    data-testid="navbar-collapsed"
  >
    <div
      className="c1"
      data-testid="close-navbar"
      onClick={[Function]}
      role="button"
    >
      <i
        className="wg-close"
      />
    </div>
    <div
      className="c2"
    />
    <li
      className="activated c3"
    >
      <div
        className="thumb-container"
      >
        <i
          className="icon wg-purveyor"
        />
      </div>
      <div
        className="c4"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        purveyor
      </div>
    </li>
    <li
      className="c3"
    >
      <div
        className="thumb-container"
      >
        <i
          className="icon wg-order"
        />
      </div>
      <div
        className="c4"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        order
      </div>
    </li>
    <li
      className="c3"
    >
      <div
        className="thumb-container"
      >
        <i
          className="icon wg-search"
        />
      </div>
      <div
        className="c4"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        search
      </div>
    </li>
    <li
      className="c3"
    >
      <div
        className="thumb-container"
      >
        <i
          className="icon wg-meat"
        />
      </div>
      <div
        className="c4"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        meat
      </div>
    </li>
  </nav>,
  .c2 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: inherit;
}

.c1 {
  font-family: Lato,sans-serif;
  font-size: 32px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
  text-transform: uppercase;
}

.c0 {
  box-sizing: border-box;
  -webkit-overflow-scrolling: touch;
  margin-top: 0;
}

<div
    className="c0"
    data-testid="content-navbar"
  >
    <div
      style={
        Object {
          "boxSizing": "border-box",
          "height": "100vh",
          "margin": "0 24px",
          "padding": "24px",
        }
      }
    >
      <div
        className="c1"
        fontWeight="title"
        size={32}
        type="#2f313a"
      >
        fullScreen
      </div>
      <div
        style={
          Object {
            "margin": "16px 0",
          }
        }
      >
        <div
          className="c2"
          fontWeight="inherit"
          size={18}
          type="#2f313a"
        >
          Lorem iTextsum dolor sit amet, consectetur adipisicing elit. Qui dicta minus molestiae vel beatae natus eveniet ratione temporibus aperiam harum alias officiis assumenda officia quibusdam deleniti eos cupiditate dolore doloribus!
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots SideNav Side Nav Full Screen With Router 1`] = `
Array [
  .c0 {
  box-sizing: border-box;
  color: #ff4411;
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 16px;
  height: 40px;
  width: 40px;
  cursor: pointer;
  border-radius: 8px;
  position: fixed;
  top: 8px;
  left: 8px;
  z-index: 90;
}

.c0:hover {
  background-color: rgba(255,68,17,0.08);
  color: #ff4411;
}

<div
    className="c0"
    data-testid="toggle-navbar"
    onClick={[Function]}
    role="button"
  >
    <i
      className="wg-list"
    />
  </div>,
  .c4 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: inherit;
  text-align: left;
  font-weight: 600;
}

.c6 {
  box-sizing: border-box;
  width: 36px;
  height: 36px;
  border-radius: 100%;
  object-fit: cover;
}

.c0 {
  box-sizing: border-box;
  position: fixed;
  bottom: 0;
  left: 0;
  top: 0;
  overflow-x: hidden;
  -webkit-transition: 0.25s;
  transition: 0.25s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  background-color: #f6f8f9;
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.32);
  z-index: 100;
  top: 0;
  width: 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-backdrop-filter: blur(5px);
  backdrop-filter: blur(5px);
  opacity: 0.9;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  list-style-type: none;
  padding: 8px;
  cursor: pointer;
  color: rgba(0,0,0,0.48);
  border-radius: 90px;
  padding: 8px 16px;
}

.c3 .thumb-container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 40px;
  min-width: 40px;
  margin-right: 8px;
}

.c3 .icon {
  font-size: 24px;
  color: rgba(0,0,0,0.48);
}

.c3:hover,
.c3.activated {
  color: #2f313a;
  background-color: rgba(255,68,17,0.04);
}

.c3:hover .icon,
.c3.activated .icon {
  color: #ff4411;
}

.c3.activated {
  padding-left: 4px;
  border-left: 4px solid #ff4411;
}

.c3:hover,
.c3.activated {
  color: #ff4411;
}

.c3.activated {
  padding-left: 16px;
  border-left: none;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  list-style-type: none;
  padding: 8px;
  cursor: pointer;
  background-color: white;
  color: rgba(0,0,0,0.48);
  border-radius: 90px;
  padding: 8px 16px;
}

.c5 .thumb-container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 40px;
  min-width: 40px;
  margin-right: 8px;
}

.c5 .icon {
  font-size: 24px;
  color: rgba(0,0,0,0.48);
}

.c5:hover,
.c5.activated {
  color: #2f313a;
  background-color: rgba(255,68,17,0.04);
}

.c5:hover .icon,
.c5.activated .icon {
  color: #ff4411;
}

.c5.activated {
  padding-left: 4px;
  border-left: 4px solid #ff4411;
}

.c5:hover,
.c5.activated {
  color: #ff4411;
}

.c5.activated {
  padding-left: 16px;
  border-left: none;
}

.c1 {
  box-sizing: border-box;
  color: rgba(0,0,0,0.48);
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 16px;
  height: 40px;
  width: 40px;
  cursor: pointer;
  border-radius: 8px;
  position: absolute;
  top: 8px;
  right: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  opacity: 0;
  -webkit-transition: 0.25s;
  transition: 0.25s;
}

.c1:hover {
  background-color: rgba(255,68,17,0.08);
  color: #ff4411;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  min-height: 56px;
  box-sizing: border-box;
  overflow-x: hidden;
}

<nav
    className="c0"
    data-testid="navbar-collapsed"
  >
    <div
      className="c1"
      data-testid="close-navbar"
      onClick={[Function]}
      role="button"
    >
      <i
        className="wg-close"
      />
    </div>
    <div
      className="c2"
    />
    <a
      aria-current={null}
      className="c3"
      expanded={false}
      highlightColor="#ff4411"
      href="/purveyor"
      iconSize="24px"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
      variant="fullScreen"
      zIndex={100}
    >
      <div
        className="thumb-container"
      >
        <i
          className="icon wg-purveyor"
        />
      </div>
      <div
        className="c4"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        purveyor
      </div>
    </a>
    <a
      aria-current={null}
      className="c3"
      expanded={false}
      highlightColor="#ff4411"
      href="/order"
      iconSize="24px"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
      variant="fullScreen"
      zIndex={100}
    >
      <div
        className="thumb-container"
      >
        <i
          className="icon wg-order"
        />
      </div>
      <div
        className="c4"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        order
      </div>
    </a>
    <a
      aria-current={null}
      className="c3"
      expanded={false}
      highlightColor="#ff4411"
      href="/search"
      iconSize="24px"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
      variant="fullScreen"
      zIndex={100}
    >
      <div
        className="thumb-container"
      >
        <i
          className="icon wg-search"
        />
      </div>
      <div
        className="c4"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        search
      </div>
    </a>
    <a
      aria-current={null}
      className="c3"
      expanded={false}
      highlightColor="#ff4411"
      href="/meat"
      iconSize="24px"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
      variant="fullScreen"
      zIndex={100}
    >
      <div
        className="thumb-container"
      >
        <i
          className="icon wg-meat"
        />
      </div>
      <div
        className="c4"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        meat
      </div>
    </a>
    <a
      aria-current={null}
      background="white"
      className="c5"
      expanded={false}
      highlightColor="#ff4411"
      href="/account"
      iconSize="24px"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
      variant="fullScreen"
      zIndex={100}
    >
      <div
        className="thumb-container"
      >
        <img
          alt=""
          className="c6"
          size={36}
          src="https://picsum.photos/640/?image=889"
        />
      </div>
      <div
        className="c4"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        Account
      </div>
    </a>
  </nav>,
  .c2 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: inherit;
}

.c1 {
  font-family: Lato,sans-serif;
  font-size: 32px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
  text-transform: uppercase;
}

.c0 {
  box-sizing: border-box;
  -webkit-overflow-scrolling: touch;
  margin-top: 0;
}

<div
    className="c0"
    data-testid="content-navbar"
  >
    <div
      style={
        Object {
          "boxSizing": "border-box",
          "height": "100vh",
          "margin": "0 24px",
          "padding": "24px",
        }
      }
    >
      <div
        className="c1"
        fontWeight="title"
        size={32}
        type="#2f313a"
      >
        select a route
      </div>
      <div
        style={
          Object {
            "margin": "16px 0",
          }
        }
      >
        <div
          className="c2"
          fontWeight="inherit"
          size={18}
          type="#2f313a"
        >
          Lorem iTextsum dolor sit amet, consectetur adipisicing elit. Qui dicta minus molestiae vel beatae natus eveniet ratione temporibus aperiam harum alias officiis assumenda officia quibusdam deleniti eos cupiditate dolore doloribus!
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots SideNav Side Nav Overlay 1`] = `
Array [
  .c0 {
  box-sizing: border-box;
  color: #ff4411;
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 16px;
  height: 40px;
  width: 40px;
  cursor: pointer;
  border-radius: 8px;
  position: fixed;
  top: 8px;
  left: 8px;
  z-index: 90;
}

.c0:hover {
  background-color: rgba(255,68,17,0.08);
  color: #ff4411;
}

<div
    className="c0"
    data-testid="toggle-navbar"
    onClick={[Function]}
    role="button"
  >
    <i
      className="wg-list"
    />
  </div>,
  .c4 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: inherit;
  text-align: left;
  font-weight: 600;
}

.c0 {
  box-sizing: border-box;
  position: fixed;
  bottom: 0;
  left: 0;
  top: 0;
  overflow-x: hidden;
  -webkit-transition: 0.25s;
  transition: 0.25s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  background-color: #f6f8f9;
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.32);
  z-index: 100;
  width: 0px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  list-style-type: none;
  padding: 8px;
  cursor: pointer;
  color: rgba(0,0,0,0.48);
}

.c3 .thumb-container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 40px;
  min-width: 40px;
  margin-right: 8px;
}

.c3 .icon {
  font-size: 24px;
  color: rgba(0,0,0,0.48);
}

.c3:hover,
.c3.activated {
  color: #2f313a;
  background-color: rgba(255,68,17,0.04);
}

.c3:hover .icon,
.c3.activated .icon {
  color: #ff4411;
}

.c3.activated {
  padding-left: 4px;
  border-left: 4px solid #ff4411;
}

.c1 {
  box-sizing: border-box;
  color: rgba(0,0,0,0.48);
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 16px;
  height: 40px;
  width: 40px;
  cursor: pointer;
  border-radius: 8px;
  position: absolute;
  top: 8px;
  right: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  opacity: 0;
  -webkit-transition: 0.25s;
  transition: 0.25s;
}

.c1:hover {
  background-color: rgba(255,68,17,0.08);
  color: #ff4411;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  min-height: 56px;
  box-sizing: border-box;
  overflow-x: hidden;
}

<nav
    className="c0"
    data-testid="navbar-collapsed"
  >
    <div
      className="c1"
      data-testid="close-navbar"
      onClick={[Function]}
      role="button"
    >
      <i
        className="wg-close"
      />
    </div>
    <div
      className="c2"
    />
    <li
      className="activated c3"
    >
      <div
        className="thumb-container"
      >
        <i
          className="icon wg-purveyor"
        />
      </div>
      <div
        className="c4"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        purveyor
      </div>
    </li>
    <li
      className="c3"
    >
      <div
        className="thumb-container"
      >
        <i
          className="icon wg-order"
        />
      </div>
      <div
        className="c4"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        order
      </div>
    </li>
    <li
      className="c3"
    >
      <div
        className="thumb-container"
      >
        <i
          className="icon wg-search"
        />
      </div>
      <div
        className="c4"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        search
      </div>
    </li>
    <li
      className="c3"
    >
      <div
        className="thumb-container"
      >
        <i
          className="icon wg-meat"
        />
      </div>
      <div
        className="c4"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        meat
      </div>
    </li>
  </nav>,
  .c2 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: inherit;
}

.c1 {
  font-family: Lato,sans-serif;
  font-size: 32px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
  text-transform: uppercase;
}

.c0 {
  box-sizing: border-box;
  -webkit-overflow-scrolling: touch;
  margin-top: 0;
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

<div
    className="c0"
    data-testid="content-navbar"
  >
    <div
      style={
        Object {
          "boxSizing": "border-box",
          "height": "100vh",
          "margin": "0 24px",
          "padding": "24px",
        }
      }
    >
      <div
        className="c1"
        fontWeight="title"
        size={32}
        type="#2f313a"
      >
        overlay
      </div>
      <div
        style={
          Object {
            "margin": "16px 0",
          }
        }
      >
        <div
          className="c2"
          fontWeight="inherit"
          size={18}
          type="#2f313a"
        >
          Lorem iTextsum dolor sit amet, consectetur adipisicing elit. Qui dicta minus molestiae vel beatae natus eveniet ratione temporibus aperiam harum alias officiis assumenda officia quibusdam deleniti eos cupiditate dolore doloribus!
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots SideNav Side Nav Overlay With Rouder 1`] = `
Array [
  .c0 {
  box-sizing: border-box;
  color: #27ae60;
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 16px;
  height: 40px;
  width: 40px;
  cursor: pointer;
  border-radius: 8px;
  position: fixed;
  top: 8px;
  left: 8px;
  z-index: 90;
}

.c0:hover {
  background-color: rgba(39,174,96,0.08);
  color: #27ae60;
}

<div
    className="c0"
    data-testid="toggle-navbar"
    onClick={[Function]}
    role="button"
  >
    <i
      className="wg-list"
    />
  </div>,
  .c4 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: inherit;
  text-align: left;
  font-weight: 600;
}

.c6 {
  box-sizing: border-box;
  width: 36px;
  height: 36px;
  border-radius: 100%;
  object-fit: cover;
}

.c0 {
  box-sizing: border-box;
  position: fixed;
  bottom: 0;
  left: 0;
  top: 0;
  overflow-x: hidden;
  -webkit-transition: 0.25s;
  transition: 0.25s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  background-color: #f6f8f9;
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.32);
  z-index: 100;
  width: 0px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  list-style-type: none;
  padding: 8px;
  cursor: pointer;
  color: rgba(0,0,0,0.48);
}

.c3 .thumb-container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 40px;
  min-width: 40px;
  margin-right: 8px;
}

.c3 .icon {
  font-size: 24px;
  color: rgba(0,0,0,0.48);
}

.c3:hover,
.c3.activated {
  color: #2f313a;
  background-color: rgba(39,174,96,0.04);
}

.c3:hover .icon,
.c3.activated .icon {
  color: #27ae60;
}

.c3.activated {
  padding-left: 4px;
  border-left: 4px solid #27ae60;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  list-style-type: none;
  padding: 8px;
  cursor: pointer;
  background-color: white;
  color: rgba(0,0,0,0.48);
}

.c5 .thumb-container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 40px;
  min-width: 40px;
  margin-right: 8px;
}

.c5 .icon {
  font-size: 24px;
  color: rgba(0,0,0,0.48);
}

.c5:hover,
.c5.activated {
  color: #2f313a;
  background-color: rgba(39,174,96,0.04);
}

.c5:hover .icon,
.c5.activated .icon {
  color: #27ae60;
}

.c5.activated {
  padding-left: 4px;
  border-left: 4px solid #27ae60;
}

.c1 {
  box-sizing: border-box;
  color: rgba(0,0,0,0.48);
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 16px;
  height: 40px;
  width: 40px;
  cursor: pointer;
  border-radius: 8px;
  position: absolute;
  top: 8px;
  right: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  opacity: 0;
  -webkit-transition: 0.25s;
  transition: 0.25s;
}

.c1:hover {
  background-color: rgba(39,174,96,0.08);
  color: #27ae60;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  min-height: 56px;
  box-sizing: border-box;
  overflow-x: hidden;
}

<nav
    className="c0"
    data-testid="navbar-collapsed"
  >
    <div
      className="c1"
      data-testid="close-navbar"
      onClick={[Function]}
      role="button"
    >
      <i
        className="wg-close"
      />
    </div>
    <div
      className="c2"
    />
    <a
      aria-current={null}
      className="c3"
      expanded={false}
      highlightColor="#27ae60"
      href="/purveyor"
      iconSize="24px"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
      variant="overlay"
      zIndex={100}
    >
      <div
        className="thumb-container"
      >
        <i
          className="icon wg-purveyor"
        />
      </div>
      <div
        className="c4"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        purveyor
      </div>
    </a>
    <a
      aria-current={null}
      className="c3"
      expanded={false}
      highlightColor="#27ae60"
      href="/order"
      iconSize="24px"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
      variant="overlay"
      zIndex={100}
    >
      <div
        className="thumb-container"
      >
        <i
          className="icon wg-order"
        />
      </div>
      <div
        className="c4"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        order
      </div>
    </a>
    <a
      aria-current={null}
      className="c3"
      expanded={false}
      highlightColor="#27ae60"
      href="/search"
      iconSize="24px"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
      variant="overlay"
      zIndex={100}
    >
      <div
        className="thumb-container"
      >
        <i
          className="icon wg-search"
        />
      </div>
      <div
        className="c4"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        search
      </div>
    </a>
    <a
      aria-current={null}
      className="c3"
      expanded={false}
      highlightColor="#27ae60"
      href="/meat"
      iconSize="24px"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
      variant="overlay"
      zIndex={100}
    >
      <div
        className="thumb-container"
      >
        <i
          className="icon wg-meat"
        />
      </div>
      <div
        className="c4"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        meat
      </div>
    </a>
    <a
      aria-current={null}
      background="white"
      className="c5"
      expanded={false}
      highlightColor="#27ae60"
      href="/account"
      iconSize="24px"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
      variant="overlay"
      zIndex={100}
    >
      <div
        className="thumb-container"
      >
        <img
          alt=""
          className="c6"
          size={36}
          src="https://picsum.photos/640/?image=889"
        />
      </div>
      <div
        className="c4"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        Account
      </div>
    </a>
  </nav>,
  .c2 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: inherit;
}

.c1 {
  font-family: Lato,sans-serif;
  font-size: 32px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
  text-transform: uppercase;
}

.c0 {
  box-sizing: border-box;
  -webkit-overflow-scrolling: touch;
  margin-top: 0;
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

<div
    className="c0"
    data-testid="content-navbar"
  >
    <div
      style={
        Object {
          "boxSizing": "border-box",
          "height": "100vh",
          "margin": "0 24px",
          "padding": "24px",
        }
      }
    >
      <div
        className="c1"
        fontWeight="title"
        size={32}
        type="#2f313a"
      >
        select a route
      </div>
      <div
        style={
          Object {
            "margin": "16px 0",
          }
        }
      >
        <div
          className="c2"
          fontWeight="inherit"
          size={18}
          type="#2f313a"
        >
          Lorem iTextsum dolor sit amet, consectetur adipisicing elit. Qui dicta minus molestiae vel beatae natus eveniet ratione temporibus aperiam harum alias officiis assumenda officia quibusdam deleniti eos cupiditate dolore doloribus!
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots SideNav Side Nav Push 1`] = `
Array [
  .c0 {
  box-sizing: border-box;
  color: #ff4411;
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 16px;
  height: 40px;
  width: 40px;
  cursor: pointer;
  border-radius: 8px;
  position: fixed;
  top: 8px;
  left: 8px;
  z-index: 110;
}

.c0:hover {
  background-color: rgba(255,68,17,0.08);
  color: #ff4411;
}

<div
    className="c0"
    data-testid="toggle-navbar"
    onClick={[Function]}
    role="button"
  >
    <i
      className="wg-list"
    />
  </div>,
  .c4 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: inherit;
  text-align: left;
  font-weight: 600;
}

.c0 {
  box-sizing: border-box;
  position: fixed;
  bottom: 0;
  left: 0;
  top: 0;
  overflow-x: hidden;
  -webkit-transition: 0.25s;
  transition: 0.25s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  background-color: #f6f8f9;
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.32);
  z-index: 100;
  width: 56px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  list-style-type: none;
  padding: 8px;
  cursor: pointer;
  color: rgba(0,0,0,0.48);
}

.c3 .thumb-container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 40px;
  min-width: 40px;
  margin-right: 8px;
}

.c3 .icon {
  font-size: 24px;
  color: rgba(0,0,0,0.48);
}

.c3:hover,
.c3.activated {
  color: #2f313a;
  background-color: rgba(255,68,17,0.04);
}

.c3:hover .icon,
.c3.activated .icon {
  color: #ff4411;
}

.c3.activated {
  padding-left: 4px;
  border-left: 4px solid #ff4411;
}

.c1 {
  box-sizing: border-box;
  color: rgba(0,0,0,0.48);
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 16px;
  height: 40px;
  width: 40px;
  cursor: pointer;
  border-radius: 8px;
  position: absolute;
  top: 8px;
  right: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  opacity: 0;
  -webkit-transition: 0.25s;
  transition: 0.25s;
  display: none;
}

.c1:hover {
  background-color: rgba(255,68,17,0.08);
  color: #ff4411;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  min-height: 56px;
  box-sizing: border-box;
  overflow-x: hidden;
}

<nav
    className="c0"
    data-testid="navbar-collapsed"
  >
    <div
      className="c1"
      data-testid="close-navbar"
      onClick={[Function]}
      role="button"
    >
      <i
        className="wg-close"
      />
    </div>
    <div
      className="c2"
    />
    <a
      aria-current={null}
      className="c3"
      expanded={false}
      highlightColor="#27ae60"
      href="/purveyor"
      iconSize="24px"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
      variant="overlay"
      zIndex={100}
    >
      <div
        className="thumb-container"
      >
        <i
          className="icon wg-purveyor"
        />
      </div>
      <div
        className="c4"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        purveyor
      </div>
    </li>
    <li
      className="c3"
      expanded={false}
      highlightColor="#27ae60"
      href="/order"
      iconSize="24px"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
      variant="overlay"
      zIndex={100}
    >
      <div
        className="thumb-container"
      >
        <i
          className="icon wg-order"
        />
      </div>
      <div
        className="c4"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        order
      </div>
    </li>
    <li
      className="c3"
      expanded={false}
      highlightColor="#27ae60"
      href="/search"
      iconSize="24px"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
      variant="overlay"
      zIndex={100}
    >
      <div
        className="thumb-container"
      >
        <i
          className="icon wg-search"
        />
      </div>
      <div
        className="c4"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        search
      </div>
    </li>
    <li
      className="c3"
      expanded={false}
      highlightColor="#27ae60"
      href="/meat"
      iconSize="24px"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
      variant="overlay"
      zIndex={100}
    >
      <div
        className="thumb-container"
      >
        <i
          className="icon wg-meat"
        />
      </div>
      <div
        className="c4"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        meat
      </div>
    </a>
    <a
      aria-current={null}
      background="white"
      className="c5"
      expanded={false}
      highlightColor="#27ae60"
      href="/account"
      iconSize="24px"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
      variant="overlay"
      zIndex={100}
    >
      <div
        className="thumb-container"
      >
        <img
          alt=""
          className="c6"
          size={36}
          src="https://picsum.photos/640/?image=889"
        />
      </div>
      <div
        className="c4"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        Account
      </div>
    </a>
  </nav>,
  .c2 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: inherit;
}

.c1 {
  font-family: Lato,sans-serif;
  font-size: 32px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
  text-transform: uppercase;
}

.c0 {
  box-sizing: border-box;
  -webkit-overflow-scrolling: touch;
  margin-top: 0;
  -webkit-transition: margin 0.25s;
  transition: margin 0.25s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  margin-left: 56px;
}

<div
    className="c0"
    data-testid="content-navbar"
  >
    <div
      style={
        Object {
          "boxSizing": "border-box",
          "height": "100vh",
          "margin": "0 24px",
          "padding": "24px",
        }
      }
    >
      <div
        className="c1"
        fontWeight="title"
        size={32}
        type="#2f313a"
      >
        push
      </div>
      <div
        style={
          Object {
            "margin": "16px 0",
          }
        }
      >
        <div
          className="c2"
          fontWeight="inherit"
          size={18}
          type="#2f313a"
        >
          Lorem iTextsum dolor sit amet, consectetur adipisicing elit. Qui dicta minus molestiae vel beatae natus eveniet ratione temporibus aperiam harum alias officiis assumenda officia quibusdam deleniti eos cupiditate dolore doloribus!
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots SideNav Side Nav Push With Router 1`] = `
Array [
  .c0 {
  box-sizing: border-box;
  color: #ff4411;
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 16px;
  height: 40px;
  width: 40px;
  cursor: pointer;
  border-radius: 8px;
  position: fixed;
  top: 8px;
  left: 8px;
  z-index: 110;
}

.c0:hover {
  background-color: rgba(255,68,17,0.08);
  color: #ff4411;
}

<div
    className="c0"
    data-testid="toggle-navbar"
    onClick={[Function]}
    role="button"
  >
    <i
      className="wg-list"
    />
  </div>,
  .c4 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: inherit;
  text-align: left;
  font-weight: 600;
}

.c6 {
  box-sizing: border-box;
  width: 36px;
  height: 36px;
  border-radius: 100%;
  object-fit: cover;
}

.c0 {
  box-sizing: border-box;
  position: fixed;
  bottom: 0;
  left: 0;
  top: 0;
  overflow-x: hidden;
  -webkit-transition: 0.25s;
  transition: 0.25s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  background-color: #f6f8f9;
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.32);
  z-index: 100;
  width: 56px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  list-style-type: none;
  padding: 8px;
  cursor: pointer;
  color: rgba(0,0,0,0.48);
}

.c3 .thumb-container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 40px;
  min-width: 40px;
  margin-right: 8px;
}

.c3 .icon {
  font-size: 24px;
  color: rgba(0,0,0,0.48);
}

.c3:hover,
.c3.activated {
  color: #2f313a;
  background-color: rgba(255,68,17,0.04);
}

.c3:hover .icon,
.c3.activated .icon {
  color: #ff4411;
}

.c3.activated {
  padding-left: 4px;
  border-left: 4px solid #ff4411;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  list-style-type: none;
  padding: 8px;
  cursor: pointer;
  background-color: white;
  color: rgba(0,0,0,0.48);
}

.c5 .thumb-container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 40px;
  min-width: 40px;
  margin-right: 8px;
}

.c5 .icon {
  font-size: 24px;
  color: rgba(0,0,0,0.48);
}

.c5:hover,
.c5.activated {
  color: #2f313a;
  background-color: rgba(255,68,17,0.04);
}

.c5:hover .icon,
.c5.activated .icon {
  color: #ff4411;
}

.c5.activated {
  padding-left: 4px;
  border-left: 4px solid #ff4411;
}

.c1 {
  box-sizing: border-box;
  color: rgba(0,0,0,0.48);
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 16px;
  height: 40px;
  width: 40px;
  cursor: pointer;
  border-radius: 8px;
  position: absolute;
  top: 8px;
  right: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  opacity: 0;
  -webkit-transition: 0.25s;
  transition: 0.25s;
  display: none;
}

.c1:hover {
  background-color: rgba(255,68,17,0.08);
  color: #ff4411;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  min-height: 56px;
  box-sizing: border-box;
  overflow-x: hidden;
}

<nav
    className="c0"
    data-testid="navbar-collapsed"
  >
    <div
      className="c1"
      data-testid="close-navbar"
      onClick={[Function]}
      role="button"
    >
      <i
        className="wg-close"
      />
    </div>
    <div
      className="c2"
    />
    <a
      aria-current={null}
      className="c3"
      expanded={false}
      highlightColor="#ff4411"
      href="/purveyor"
      iconSize="24px"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
      variant="push"
      zIndex={100}
    >
      <div
        className="thumb-container"
      >
        <i
          className="icon wg-purveyor"
        />
      </div>
      <div
        className="c4"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        purveyor
      </div>
    </a>
    <a
      aria-current={null}
      className="c3"
      expanded={false}
      highlightColor="#ff4411"
      href="/order"
      iconSize="24px"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
      variant="push"
      zIndex={100}
    >
      <div
        className="thumb-container"
      >
        <i
          className="icon wg-order"
        />
      </div>
      <div
        className="c4"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        order
      </div>
    </a>
    <a
      aria-current={null}
      className="c3"
      expanded={false}
      highlightColor="#ff4411"
      href="/search"
      iconSize="24px"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
      variant="push"
      zIndex={100}
    >
      <div
        className="thumb-container"
      >
        <i
          className="icon wg-search"
        />
      </div>
      <div
        className="c4"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        search
      </div>
    </a>
    <a
      aria-current={null}
      className="c3"
      expanded={false}
      highlightColor="#ff4411"
      href="/meat"
      iconSize="24px"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
      variant="push"
      zIndex={100}
    >
      <div
        className="thumb-container"
      >
        <i
          className="icon wg-meat"
        />
      </div>
      <div
        className="c4"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        meat
      </div>
    </a>
    <a
      aria-current={null}
      background="white"
      className="c5"
      expanded={false}
      highlightColor="#ff4411"
      href="/account"
      iconSize="24px"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
      variant="push"
      zIndex={100}
    >
      <div
        className="thumb-container"
      >
        <img
          alt=""
          className="c6"
          size={36}
          src="https://picsum.photos/640/?image=889"
        />
      </div>
      <div
        className="c4"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        Account
      </div>
    </a>
  </nav>,
  .c2 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: inherit;
}

.c1 {
  font-family: Lato,sans-serif;
  font-size: 32px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
  text-transform: uppercase;
}

.c0 {
  box-sizing: border-box;
  -webkit-overflow-scrolling: touch;
  margin-top: 0;
  -webkit-transition: margin 0.25s;
  transition: margin 0.25s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  margin-left: 56px;
}

<div
    className="c0"
    data-testid="content-navbar"
  >
    <div
      style={
        Object {
          "boxSizing": "border-box",
          "height": "100vh",
          "margin": "0 24px",
          "padding": "24px",
        }
      }
    >
      <div
        className="c1"
        fontWeight="title"
        size={32}
        type="#2f313a"
      >
        select a route
      </div>
      <div
        style={
          Object {
            "margin": "16px 0",
          }
        }
      >
        <div
          className="c2"
          fontWeight="inherit"
          size={18}
          type="#2f313a"
        >
          Lorem iTextsum dolor sit amet, consectetur adipisicing elit. Qui dicta minus molestiae vel beatae natus eveniet ratione temporibus aperiam harum alias officiis assumenda officia quibusdam deleniti eos cupiditate dolore doloribus!
        </div>
      </div>
    </div>
  </div>,
]
`;
